[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = "xw"
readme = "README.md"
packages = [
    { include = "app" },
    { include = "packages" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
pirate = {path = "packages/pirate", develop = true}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
